--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ window.applicationCache.oncached = window.applicationCache.onupdateready = funct
 <!-- not yet -->
 <!--<a href="payload.html#p0=mira/mira.js&p1=ps4-hen-vtx.js">JB+HEN</a>-->
 <!-- /not yet -->
+<a href="payload.html#p0=mira/mira.js&p1=goldhen.js">JB+GOLDHEN</a>
 <a href="payload.html#p0=mira/mira.js&p1=linux/1gb.js">JB+LINUX (VRAM 1GB)</a>
 <a href="payload.html#p0=mira/mira.js&p1=linux/3gb.js">JB+LINUX (VRAM 3GB)</a>
 <a href="payload.html#p0=mira/mira.js&p1=ftp.js">JB+FTP</a>
